--- a/src/assets/css/_reset.scss
+++ b/src/assets/css/_reset.scss
@@ -31,7 +31,7 @@
 		"Segoe UI Emoji",
 		"Segoe UI Symbol",
 		sans-serif;
-	font-size: 16px;
+	font-size: min(0.83vw, 16px);
 	font-style: normal;
 	font-weight: 400;
 	line-height: 1;
