--- a/src/assets/css/pulmuone.scss
+++ b/src/assets/css/pulmuone.scss
@@ -935,6 +935,7 @@
 		position: absolute;
 		top: 0;
 		width: 100%;
+		z-index: -1;
 		@include mixins.transition(1000ms, cubic-bezier(0.47, 0, 0.23, 1.38));
 	}
 
